--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "governance:check": "tsx scripts/governanceHealthReport.ts"
   },
   "dependencies": {
+    "lucide-react": "^0.574.0",
     "next": "16.1.6",
     "react": "19.2.4",
     "react-dom": "19.2.4",
