implement v11.2 horizontal protocol layout and audit-pure design system
Hizmetler sayfası, yatırımcı odaklı "Teknik Analiz Protokolü" disiplinine uygun olarak v11.2 standartlarına yükseltildi:

- Sayfa Yerleşimi: "AFA'nın Farkı" bölümü, dikey kart yapısından tam genişlikli yatay şerit (horizontal band) düzenine geçirildi.
- Görsel Strateji: Arka plan fotoğraf filtreleri kaldırıldı; görseller sol tarafta bağımsız kare "kanıt" blokları olarak yapılandırıldı.
- Audit-Border Sistemi: Her hizmet şeridinin soluna, kurumsal renk paletiyle uyumlu 8px kalınlığında dikey denetim çizgileri eklendi.
- Tipografi: Okuma konforunu artırmak için tüm metinler sola hizalandı (left-align) ve justify kuralı tasfiye edildi.
- UI Detayları: Kurumsal ciddiyet ile modern dokunuş arasında denge kurmak için border-radius değerleri 6px olarak standardize edildi.
- Hareket Politikası: Sayfa genelindeki animasyonlar 150ms'lik mikro-transition'lar ile optimize edilerek "metodolojik netlik" korunmuş oldu.

--- a/.dockerignore
+++ b/.dockerignore
@@ -16,8 +16,10 @@
 **/docker-compose*
 **/compose*
 **/Dockerfile*
+**/.next
 **/node_modules
 **/npm-debug.log
+**/.env.local
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
